--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer row">
                             <li class="col-6 col-sm-3 ui-menu-color-home menuitem">
-                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="intrests.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
@@ -214,4 +214,6 @@
         </div>
     </footer>
 </body>
+
+
 </html>
